[gd_scene load_steps=47 format=3 uid="uid://c76sf0n368gv4"]

[ext_resource type="Script" uid="uid://dmcww36kyunxh" path="res://Scripts/main_menu.gd" id="1_hj8pw"]
[ext_resource type="Texture2D" uid="uid://do36xswi10w03" path="res://Title_DKTC.png" id="1_kyn6x"]
[ext_resource type="Script" uid="uid://b5ae5itgklnl1" path="res://Scripts/crewmate.gd" id="3_mua5f"]
[ext_resource type="AudioStream" uid="uid://csnr31th2vdse" path="res://Music/SL_AW_Sound_Effect_Lost.wav" id="4_2clfw"]
[ext_resource type="Texture2D" uid="uid://2wb3tv4bcfbj" path="res://Sprites/Lights/32x32_Arcane_0.png" id="4_n0nae"]
[ext_resource type="Texture2D" uid="uid://d27sfgnc1hy2l" path="res://Sprites/Units/Crew/Crew_AllAnims.png" id="5_rge2s"]
[ext_resource type="Texture2D" uid="uid://bv48ws3iugwkt" path="res://Sprites/Units/idle.png" id="6_cekaw"]
[ext_resource type="AudioStream" uid="uid://cl513jsgi4r8e" path="res://SFX/Crew/Humanoid_exploding.mp3" id="7_mj5i3"]
[ext_resource type="AudioStream" uid="uid://b1tkmmn0tqrhp" path="res://SFX/Crew/Ugh2.wav" id="8_rr0r7"]
[ext_resource type="AudioStream" uid="uid://de3cvw02tkf7" path="res://Music/SL_AW_Sound_Effect_LoFi_Melody_92bpm.wav" id="9_f8db7"]
[ext_resource type="AudioStream" uid="uid://eow6kk2i3ioe" path="res://SFX/Impacts/body_hit_large_32.wav" id="12_37i32"]
[ext_resource type="AudioStream" uid="uid://5va8gu4p2ju6" path="res://SFX/Impacts/body_hit_large_44.wav" id="13_brti1"]
[ext_resource type="AudioStream" uid="uid://clsto5ssp3vnd" path="res://SFX/Impacts/face_hit_Large_78.wav" id="14_d4gic"]
[ext_resource type="AudioStream" uid="uid://yogqelr6v37b" path="res://SFX/Impacts/metal_punch_06.wav" id="15_u0j1k"]
[ext_resource type="Texture2D" uid="uid://du00ff06kov78" path="res://Sprites/Units/AI/AutoPilot.png" id="16_geucn"]

[sub_resource type="Gradient" id="Gradient_0mwfp"]
offsets = PackedFloat32Array(0, 0.0424028, 0.353357)
colors = PackedColorArray(0, 0, 0, 0, 1, 0.121569, 0.262745, 0.290196, 0.999881, 0.120913, 0.262506, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sf8dk"]
gradient = SubResource("Gradient_0mwfp")
height = 192
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_nhjte"]
atlas = ExtResource("5_rge2s")
region = Rect2(209, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_o51e7"]
atlas = ExtResource("5_rge2s")
region = Rect2(220, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_cosqy"]
atlas = ExtResource("5_rge2s")
region = Rect2(231, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj6mx"]
atlas = ExtResource("5_rge2s")
region = Rect2(44, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_ac224"]
atlas = ExtResource("5_rge2s")
region = Rect2(55, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_igwun"]
atlas = ExtResource("5_rge2s")
region = Rect2(66, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_15yas"]
atlas = ExtResource("5_rge2s")
region = Rect2(88, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlkui"]
atlas = ExtResource("5_rge2s")
region = Rect2(99, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tvgb"]
atlas = ExtResource("5_rge2s")
region = Rect2(110, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7ody"]
atlas = ExtResource("5_rge2s")
region = Rect2(121, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_28iol"]
atlas = ExtResource("5_rge2s")
region = Rect2(132, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lxqx"]
atlas = ExtResource("6_cekaw")
region = Rect2(0, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_qydjt"]
atlas = ExtResource("6_cekaw")
region = Rect2(11, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_27dmu"]
atlas = ExtResource("6_cekaw")
region = Rect2(22, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dtqg"]
atlas = ExtResource("5_rge2s")
region = Rect2(154, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_emvji"]
atlas = ExtResource("5_rge2s")
region = Rect2(165, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_wybgi"]
atlas = ExtResource("5_rge2s")
region = Rect2(176, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ffdm"]
atlas = ExtResource("5_rge2s")
region = Rect2(187, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_hklw7"]
atlas = ExtResource("5_rge2s")
region = Rect2(0, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyl7c"]
atlas = ExtResource("5_rge2s")
region = Rect2(11, 0, 11, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfq4j"]
atlas = ExtResource("5_rge2s")
region = Rect2(22, 0, 11, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_1uijs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhjte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o51e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cosqy")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj6mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ac224")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_igwun")
}],
"loop": false,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15yas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlkui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tvgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7ody")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28iol")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lxqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qydjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27dmu")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dtqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emvji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wybgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ffdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dtqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emvji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wybgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emvji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dtqg")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hklw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyl7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfq4j")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e20ki"]
radius = 4.0

[sub_resource type="Curve" id="Curve_k6j2f"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0.253555, 1.79856), 0.0, 46.9853, 0, 0, Vector2(0.988152, 100), -3.0835, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ufyr4"]
_limits = [0.0, 2.0, 0.0, 1.0]
_data = [Vector2(0.632701, 1.07644), 0.0, -0.308341, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_uqsom"]
offsets = PackedFloat32Array(0, 0.411168)
colors = PackedColorArray(0.31802, 0.31802, 0.31802, 1, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_erar0"]
resource_name = "MainMenuBegin"
length = 10.0
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AI_Eye_red:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.111111), Color(1, 1, 1, 0.222222), Color(1, 1, 1, 0.333333), Color(1, 1, 1, 0.444444), Color(1, 1, 1, 0.555556), Color(1, 1, 1, 0.666667), Color(1, 1, 1, 0.777778), Color(1, 1, 1, 0.888889), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/BodyHitLarge32:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MenuContent/TextureRect4:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.596078)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MenuContent/TextureRect5:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.33333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.596078)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SFX/BodyHitLarge44:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.33333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SFX/FaceHitLarge78:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SFX/MetalPunch06:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.66667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MenuContent/TextureRect6:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.66667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.596078)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("MenuContent/TextureRect7:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.596078)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasModulate:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 6, 6.16667, 6.33333, 6.5, 6.66667, 6.83333, 7, 7.16667, 7.33333, 7.5, 7.66667, 7.83333, 8, 8.16667, 8.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0.928571, 0.928571, 0.928571, 1), Color(0.857143, 0.857143, 0.857143, 1), Color(0.785714, 0.785714, 0.785714, 1), Color(0.714286, 0.714286, 0.714286, 1), Color(0.642857, 0.642857, 0.642857, 1), Color(0.571429, 0.571429, 0.571429, 1), Color(0.5, 0.5, 0.5, 1), Color(0.428571, 0.428571, 0.428571, 1), Color(0.357143, 0.357143, 0.357143, 1), Color(0.285714, 0.285714, 0.285714, 1), Color(0.214286, 0.214286, 0.214286, 1), Color(0.142857, 0.142857, 0.142857, 1), Color(0.0714284, 0.0714284, 0.0714284, 1), Color(0, 0, 0, 1)]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_game"
}]
}

[sub_resource type="Animation" id="Animation_vx4ix"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AI_Eye_red:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SFX/BodyHitLarge32:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MenuContent/TextureRect4:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MenuContent/TextureRect5:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SFX/BodyHitLarge44:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SFX/FaceHitLarge78:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SFX/MetalPunch06:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("MenuContent/TextureRect6:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("MenuContent/TextureRect7:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasModulate:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5e6v"]
_data = {
&"MainMenuBegin": SubResource("Animation_erar0"),
&"RESET": SubResource("Animation_vx4ix")
}

[node name="Menu" type="Node2D" node_paths=PackedStringArray("crewmate", "music", "music_to_begin") groups=["Game Scenes"]]
script = ExtResource("1_hj8pw")
crewmate = NodePath("MenuContent/CrewMenuToken")
music = NodePath("Music")
music_to_begin = NodePath("Music_ToBegin")
metadata/HUD = false

[node name="Menu" type="Camera2D" parent="." groups=["Cameras"]]
position = Vector2(32, 32)

[node name="MenuContent" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="MenuContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_kyn6x")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="MenuContent/TextureRect2"]
layout_mode = 0
offset_left = 32.0
offset_top = 51.0
offset_right = 48.0
offset_bottom = 64.0
color = Color(0.188235, 0.376471, 0.509804, 1)

[node name="Control" type="Control" parent="MenuContent"]
anchors_preset = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 48.0
offset_bottom = 64.0
mouse_default_cursor_shape = 16

[node name="TextureRect4" type="TextureRect" parent="MenuContent"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 256.0
scale = Vector2(0.25, 0.25)
mouse_filter = 2
texture = SubResource("GradientTexture2D_sf8dk")

[node name="TextureRect5" type="TextureRect" parent="MenuContent"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 16.0
offset_right = 80.0
offset_bottom = 256.0
scale = Vector2(0.25, 0.25)
mouse_filter = 2
texture = SubResource("GradientTexture2D_sf8dk")

[node name="TextureRect6" type="TextureRect" parent="MenuContent"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 32.0
offset_right = 96.0
offset_bottom = 192.0
scale = Vector2(0.25, 0.25)
mouse_filter = 2
texture = SubResource("GradientTexture2D_sf8dk")

[node name="TextureRect7" type="TextureRect" parent="MenuContent"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 48.0
offset_right = 112.0
offset_bottom = 256.0
scale = Vector2(0.25, 0.25)
mouse_filter = 2
texture = SubResource("GradientTexture2D_sf8dk")

[node name="CrewMenuToken" type="CharacterBody2D" parent="MenuContent" groups=["Crew"]]
position = Vector2(40, 56)
collision_mask = 7
collision_priority = 1.5
input_pickable = true
script = ExtResource("3_mua5f")
is_menu_prop = true
sentient = false
movement_speed = 25.0
random_colors = PackedColorArray(0.843137, 0.482353, 0.729412, 1, 0.6, 0.898039, 0.313726, 1, 0.984314, 0.94902, 0.211765, 1, 0.67451, 0.196078, 0.196078, 1, 0.388235, 0.607843, 1, 1, 0.462745, 0.258824, 0.541176, 1, 0.87451, 0.443137, 0.14902, 1, 0.133333, 0.12549, 0.203922, 1)
dead_color = Color(0.623529, 0, 0, 1)
metadata/crew = true

[node name="PointLight2D" type="PointLight2D" parent="MenuContent/CrewMenuToken"]
z_index = -3
position = Vector2(0, 1.33333)
rotation = -3.14159
shadow_enabled = true
texture = ExtResource("4_n0nae")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MenuContent/CrewMenuToken"]
sprite_frames = SubResource("SpriteFrames_1uijs")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="MenuContent/CrewMenuToken"]
visible = false
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_e20ki")
debug_color = Color(0.921605, 0.240823, 0.367457, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="MenuContent/CrewMenuToken"]
path_desired_distance = 5.0
target_desired_distance = 4.0
path_max_distance = 10.0
avoidance_enabled = true
radius = 8.0
neighbor_distance = 40.0
time_horizon_agents = 2.0
time_horizon_obstacles = 1.0
avoidance_mask = 0
debug_use_custom = true
debug_path_custom_point_size = 1.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="MenuContent/CrewMenuToken"]
emitting = false
amount = 22
lifetime = 4.0
one_shot = true
preprocess = 0.1
explosiveness = 1.0
randomness = 0.6
emission_shape = 2
emission_sphere_radius = 6.0
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 45)
initial_velocity_min = 40.0
initial_velocity_max = 60.0
damping_min = 41.991
damping_max = 54.299
damping_curve = SubResource("Curve_k6j2f")
scale_amount_max = 2.5
scale_amount_curve = SubResource("Curve_ufyr4")
color = Color(0.941176, 0, 0, 0.498039)
color_initial_ramp = SubResource("Gradient_uqsom")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="MenuContent/CrewMenuToken"]
stream = ExtResource("7_mj5i3")
volume_db = -10.0
pitch_scale = 0.8

[node name="AudioStreamPlayer2D_Oughh" type="AudioStreamPlayer2D" parent="MenuContent/CrewMenuToken"]
stream = ExtResource("8_rr0r7")
bus = &"Reverb"

[node name="DecayTimer" type="Timer" parent="MenuContent/CrewMenuToken"]
wait_time = 2.5
one_shot = true

[node name="JobTimer" type="Timer" parent="MenuContent/CrewMenuToken"]
wait_time = 4.0
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="MenuContent/CrewMenuToken"]
visible = false
offset_left = -8.0
offset_top = -10.0
offset_right = 24.0
offset_bottom = -6.0
scale = Vector2(0.5, 0.5)
show_percentage = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_f8db7")
volume_db = -30.0
pitch_scale = 0.95
autoplay = true

[node name="Music_ToBegin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_2clfw")
volume_db = -10.0
bus = &"Reverb"

[node name="SFX" type="Node" parent="."]

[node name="BodyHitLarge32" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("12_37i32")
bus = &"Retro"

[node name="BodyHitLarge44" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("13_brti1")
bus = &"Retro"

[node name="FaceHitLarge78" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("14_d4gic")
bus = &"Retro"

[node name="MetalPunch06" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("15_u0j1k")
bus = &"Retro"

[node name="Begin" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k5e6v")
}

[node name="AI_Eye_red" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(32, 32)
texture = ExtResource("16_geucn")

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="DEBUG_SKIP" type="Button" parent="."]
offset_top = 15.0
offset_right = 64.0
offset_bottom = 46.0
text = "SKIP"

[connection signal="gui_input" from="MenuContent/Control" to="." method="_on_control_gui_input"]
[connection signal="input_event" from="MenuContent/CrewMenuToken" to="MenuContent/CrewMenuToken" method="_on_input_event"]
[connection signal="navigation_finished" from="MenuContent/CrewMenuToken/NavigationAgent2D" to="MenuContent/CrewMenuToken" method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="velocity_computed" from="MenuContent/CrewMenuToken/NavigationAgent2D" to="MenuContent/CrewMenuToken" method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="MenuContent/CrewMenuToken/DecayTimer" to="MenuContent/CrewMenuToken" method="_on_decay_timer_timeout"]
[connection signal="timeout" from="MenuContent/CrewMenuToken/JobTimer" to="MenuContent/CrewMenuToken" method="_on_job_timer_timeout"]
[connection signal="pressed" from="DEBUG_SKIP" to="." method="_on_debug_skip_pressed"]
